Bug 1307567 - Remove inline styles from legacy pages

--- a/bedrock/foundation/templates/foundation/annualreport/2010/people.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2010/people.html
@@ -43,7 +43,7 @@
     </div>
     <p>{% trans indonesia="http://www.mozilla.web.id/" %}The <a href="{{ indonesia }}">Mozilla community in Indonesia</a> has developed an Indonesian mascot character, “Kumi,” which  has been  celebrated and distributed as a paper toy at many of this  year’s  events. The community now has regional leaders in the five largest cities in Indonesia, which have been actively promoting Mozilla and Firefox. Thanks to the enthusiasm and passion of this community, Firefox enjoys the largest market share in the world in Indonesia.{% endtrans %}</p>
 
-    <img src="{{ static('img/foundation/annualreport/2010/kumi.png') }}" width="134" height="104" style="margin-left: 150px" alt="Kumi" />
+    <img src="{{ static('img/foundation/annualreport/2010/kumi.png') }}" width="134" height="104" alt="Kumi" />
 
     <div class="img-left">
       <img src="{{ static('img/foundation/annualreport/2010/photo-mozilla-paris.jpg') }}" width="294" height="278" alt="{{ _('ReMo Work Week in Paris') }}" />
