--- a/bedrock/mozorg/templates/mozorg/book.html
+++ b/bedrock/mozorg/templates/mozorg/book.html
@@ -5,45 +5,11 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
 <head>
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-    <title>The Book of Mozilla</title>
-
-    <style type="text/css">
-    html {
-      background: maroon;
-      color: white;
-      font-style: italic;
-    }
-
-    .moztext {
-      margin-top: 15%;
-      font-size: 1.1em;
-      font-family: serif;
-      text-align: center;
-      line-height: 1.5;
-    }
-
-    .from {
-      font-size: 1.95em;
-      font-family: serif;
-      text-align: right;
-    }
-
-    em {
-      font-size: 1.3em;
-      line-height: 0;
-    }
-
-    .f {
-      padding-left: .2ex;
-    }
-
-    a {
-      text-decoration: none;
-      color: white;
-    }
-
-    </style>
+  <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+  <title>The Book of Mozilla</title>
+  {% block page_css %}
+    {% stylesheet 'book' %}
+  {% endblock %}
 </head>
 <body>
 
@@ -53,9 +19,9 @@
 <!-- This verse announces the birth of the beast (Netscape) and warns bad coders (up to Netscape 3, when you watched the HTML source code with the internal viewer, bad tags blinked). -->
 
 <p class="moztext">
-And the beast shall come forth surrounded by a roiling <em>cloud</em> of 
-<em>vengeance</em>. The house of the unbelievers shall be <em>razed</em> 
-and they shall be <em>scorched</em> to the earth. Their tags shall <em>blink</em> 
+And the beast shall come forth surrounded by a roiling <em>cloud</em> of
+<em>vengeance</em>. The house of the unbelievers shall be <em>razed</em>
+and they shall be <em>scorched</em> to the earth. Their tags shall <em>blink</em>
 until the end of <em>days.</em>
 </p>
 
@@ -68,13 +34,13 @@ from <strong>The Book of Mozilla,</strong> 12:10
 <!-- The source code is made available to the legion of thousands of coders of the open source community, that will fight against the followers of Mammon (Microsoft Internet Explorer). -->
 
 <p class="moztext">
-And the beast shall be made <em>legion</em>. 
-Its numbers shall be increased a <em>thousand thousand</em> fold. 
-The din of a million keyboards like unto a great <em>storm</em> 
+And the beast shall be made <em>legion</em>.
+Its numbers shall be increased a <em>thousand thousand</em> fold.
+The din of a million keyboards like unto a great <em>storm</em>
 shall cover the earth, and the followers of Mammon shall <em>tremble</em>.
 </p>
 
-<p class="from"> 
+<p class="from">
  from <strong>The Book of Mozilla,</strong> 3:31<br/>
  (Red Letter Edition)
 </p>
@@ -121,7 +87,7 @@ sacred words</a></em>, and <em><a href="https://wiki.mozilla.org/About:mozilla">
 <p class="moztext">
 The <em>twins</em> of Mammon quarrelled. Their warring plunged the world into a
 <em>new darkness</em>, and the beast abhorred the darkness. So it began to move
-<em>swiftly</em>, and grew more powerful, and went forth and multiplied. 
+<em>swiftly</em>, and grew more powerful, and went forth and multiplied.
 And the beasts brought <em class="f">fire</em> and light to the darkness.
 </p>
 
