--- a/bedrock/mozorg/templates/mozorg/projects/mozilla-based.html
+++ b/bedrock/mozorg/templates/mozorg/projects/mozilla-based.html
@@ -353,7 +353,11 @@
   <li><a href="https://wiki.mozilla.org/Consulting">{{ _('Mozilla consultants') }}</a></li>
   </ul>
 
-  <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;"><a href="/poweredby"><img width="200" height="55" alt="{{ _('Powered by Mozilla') }}" src="{{ static('img/projects/mozilla-based/poweredby_200.gif') }}"></a></div>
+  <div class="powered-by">
+    <a href="{{ url('mozorg.powered-by') }}">
+      <img width="200" height="55" alt="{{ _('Powered by Mozilla') }}" src="{{ static('img/projects/mozilla-based/poweredby_200.gif') }}">
+    </a>
+  </div>
 </aside>
 
 </div>
