--- a/bedrock/mozorg/templates/mozorg/mpl/2.0/index.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/2.0/index.html
@@ -5,73 +5,12 @@
   <meta name="generator" content="pandoc" />
   <title>Mozilla Public License, version 2.0</title>
   <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="{{ static('js/libs/html5shiv.js') }}"></script>
   <![endif]-->
 
-  <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
-
-  <style type="text/css">
-	body { 	font-family: 'Crimson Text', serif;
-		max-width: 30em;
-		margin-left:auto;
-		margin-right:auto;
-		text-align: justify;
-		-moz-hyphens: auto;
-		font-size: 110%
-		}
-
-	h1, h2, h3 {
-		font-family: 'Lora', serif;
-	     	font-variant: small-caps;
-		}
-
-	h1 {
-		text-align: center;
-		-moz-hyphens: none;
-		font-size: 160%;
-		}
-	h2 {
-		font-size: 140%;
-		-moz-hyphens: none;
-		text-align: left;
-		}
-	h3 {
-		font-size: 120%;
-		-moz-hyphens: none;
-		text-align: left;
-		}
-
-	blockquote {
-		font-family: 'Droid Sans Mono', mono;
-		text-align: left;
-		-moz-hyphens: none;
-		}
-
-	code {
-		font-family: 'Droid Sans Mono', mono;
-		}
-
-	em {
-		background: #FEFD80;
-		border: 30px solid #FEFD80;
-		float: left;
-		line-height: 1.25em;
-    		margin-left: 10px;
-		margin-right: 10px;
-		margin-bottom: 10px;
-		margin-top:-10px;
-/*		text-transform: uppercase; */
-		font-style: normal;
-	}
-
-	dt {	font-family: 'Lora', serif;
-		font-weight: bold;
-		font-size: 100%;
-		}
-
-  </style>
+  {% block page_css %}
+    {% stylesheet 'mpl-2-0' %}
+  {% endblock %}
 </head>
 <body>
 <h1 id="mozilla-public-license-version-2.0">Mozilla Public License<br>Version 2.0</h1>
