--- a/media/css/firefox/geolocation.less
+++ b/media/css/firefox/geolocation.less
@@ -20,6 +20,10 @@
     .font-size(22px);
 }
 
+#try-geolocation {
+    display: none;
+}
+
 #map_canvas {
     width: 100%;
     height: 300px;
@@ -38,7 +42,7 @@
     #geo-demo {
         position: relative;
         top: 50px;
-        background: #646464; 
+        background: #646464;
         padding: 0 0 10px 0;
     }
 
