Include lang files in home page test variations

--- a/bedrock/mozorg/templates/mozorg/home/home-a.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-a.html
@@ -4,6 +4,8 @@
 
 {% extends "mozorg/home/home.html" %}
 
+{% add_lang_files "mozorg/home/index-2016" %}
+
 {% block body_class %}lang-{{ LANG }} variant-a{% endblock %}
 
 {% block page_css %}
