--- a/bedrock/mozorg/templates/mozorg/home/home-b.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-b.html
@@ -4,4 +4,6 @@
 
 {% extends "mozorg/home/home-a.html" %}
 
+{% add_lang_files "mozorg/home/index-2016" %}
+
 {% block body_class %}lang-{{ LANG }} variant-b{% endblock %}
