Fix foundation homepage on webkit small screen
Programs now stay within the appropriate column.

Addresses https://bugzilla.mozilla.org/show_bug.cgi?id=1309321

--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -126,9 +126,7 @@
 .program-column {
     .border-box;
     padding: 0.5em;
-    flex-basis: 33%;
-    flex-grow: 1;
-    min-width: 14em;
+    flex: 1 0 14em;
     li + li{
         margin-top: 0;
     }
