[fix bug 1304538] Add sha-1 download buttons for IE 6-8

--- a/bedrock/base/templates/product-all-macros.html
+++ b/bedrock/base/templates/product-all-macros.html
@@ -52,7 +52,7 @@
           <tr>
             <th colspan="2" scope="col">{{ _('Language') }}</th>
             {% for p_name, p_label in platforms %}
-              <th scope="col">{{ p_label|replace('\n', '<br>'|safe) }}</th>
+              <th scope="col" class="{{ p_name }}">{{ p_label|replace('\n', '<br>'|safe) }}</th>
             {% endfor %}
           </tr>
         </thead>
