--- a/media/css/firefox/new/all-test-variations.less
+++ b/media/css/firefox/new/all-test-variations.less
@@ -90,6 +90,21 @@
             background-size: 20px 16px;
             padding-left: 24px;
         }
+
+        &.winsha1 {
+            display: none;
+        }
+    }
+}
+
+.windows.sha-1 {
+    #fx-modal-direct-downloads {
+        .win32 {
+            display: none;
+        }
+        .winsha1 {
+            display: inline-block;
+        }
     }
 }
 
