--- a/bedrock/firefox/templates/firefox/all.html
+++ b/bedrock/firefox/templates/firefox/all.html
@@ -72,6 +72,12 @@
   {% stylesheet 'firefox_all' %}
 {% endblock %}
 
+{% block extrahead %}
+<!--[if lte IE 8]>
+  {% stylesheet 'firefox_all_old_ie' %}
+<![endif]-->
+{% endblock %}
+
 {% block site_header_logo %}
   {% if channel == 'alpha' %}
     <h2><a href="{{ url('firefox.developer') }}">{{ high_res_img('firefox/developer/title.png', {'alt': _('Firefox Developer Edition'), 'width': '220', 'height': '84'}) }}</a></h2>
