--- a/bedrock/thunderbird/templates/thunderbird/includes/download-button.html
+++ b/bedrock/thunderbird/templates/thunderbird/includes/download-button.html
@@ -53,7 +53,7 @@
       </li>
     {% endfor %}
   </ul>
-  <small class="download-other download-other-desktop os_linux os_linux64 os_osx os_win">
+  <small class="download-other download-other-desktop os_linux os_linux64 os_osx os_win os_winsha1">
     <a href="{{ thunderbird_url('all', channel) }}">{{ _('Systems &amp; Languages') }}</a> |
     {% if channel != 'alpha' %}{# Earlybird release notes are not available yet #}
     <a href="{{ thunderbird_url('notes', channel) }}">{{ _('What’s New') }}</a> |
