--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -1,3 +1,7 @@
+// This Source Code Form is subject to the terms of the Mozilla Public
+// License, v. 2.0. If a copy of the MPL was not distributed with this
+// file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
 @import "../sandstone/lib.less";
 
 body.nightly {
@@ -405,5 +409,26 @@ body.nightly {
         top: auto;
         right: auto;
         margin: 0 10px;
+    }
+}
+
+/* The sha-1 download column is hidden by default */
+.js #builds .build-table {
+    thead tr .winsha1,
+    tbody tr .winsha1 {
+        display: none;
+    }
+}
+
+/* IE on Windows XP, Server 2003, Vista need sha-1 button */
+.windows.sha-1 #builds .build-table {
+    thead tr .win,
+    tbody tr .win {
+        display: none;
+    }
+
+    thead tr .winsha1,
+    tbody tr .winsha1 {
+        display: block;
     }
 }
