--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -308,6 +308,7 @@ ul.download-list {
 }
 
 /* OS detection */
+.download-button .os_winsha1,
 .download-button .os_win64,
 .download-button .os_linux,
 .download-button .os_linux64,
@@ -403,6 +404,15 @@ ul.download-list {
 .android.gingerbread .download-button .download-other.os_android .api-15,
 .android.x86 .download-button .download-other.os_android .armv7up {
     display: inline !important;
+}
+
+/* IE on Windows XP, Server 2003, Vista need sha-1 button */
+.windows.sha-1 .download-button .os_win {
+    display: none !important;
+}
+
+.windows.sha-1 .download-button .os_winsha1 {
+    display: block !important;
 }
 
 /* l10n download button tweaks */
