Fix Bug 1309692 - Unique page title is missing on the refreshed Foundation pages

--- a/bedrock/foundation/templates/foundation/advocacy.html
+++ b/bedrock/foundation/templates/foundation/advocacy.html
@@ -4,14 +4,9 @@
 
 {% extends "foundation/base-resp.html" %}
 
-{% block page_title %}{{ _('Mozilla Advocacy') }}{% endblock %}
+{% block page_title %}{{ _('Mozilla Advocacy — Rallying citizens to protect the open Internet') }}{% endblock %}
 
 {% set body_id = "advocacy" %}
-
-{% block article_header %}
-  <h2>{{ _('Mozilla Advocacy') }}</h2>
-  <p>{{ _('Rallying citizens to protect the open Internet') }}</p>
-{% endblock %}
 
 {% block article %}
   <p>
