--- a/bedrock/foundation/templates/foundation/base-resp.html
+++ b/bedrock/foundation/templates/foundation/base-resp.html
@@ -30,7 +30,7 @@
 {% block content %}
   <main>
     <header class="page-header">
-      <h1><span class="content">{{ _('The Mozilla Foundation') }}</span></h1>
+      <h1><span class="content">{{ self.page_title() }}</span></h1>
     </header>
     <section>
       <div class="content content-main">
