--- a/bedrock/foundation/templates/foundation/issues.html
+++ b/bedrock/foundation/templates/foundation/issues.html
@@ -4,14 +4,9 @@
 
 {% extends "foundation/base-resp.html" %}
 
-{% block page_title %}{{ _('Mozilla’s Key Internet Issues') }}{% endblock %}
+{% block page_title %}{{ _('Mozilla’s Key Internet Issues — Shaping the Agenda') }}{% endblock %}
 
 {% set body_id = "issues" %}
-
-{% block article_header %}
-  <h2>{{ _('Mozilla’s Key Internet Issues') }}</h2>
-  <p>{{ _('Shaping the Agenda') }}</p>
-{% endblock %}
 
 {% block article %}
   <p>
