--- a/bedrock/foundation/templates/foundation/licensing/binary-components/rationale.html
+++ b/bedrock/foundation/templates/foundation/licensing/binary-components/rationale.html
@@ -4,14 +4,7 @@
 
 {% extends "foundation/base-resp.html" %}
 
-{% block page_title %}{{ _('Mozilla Licensing Policies - Binary Components') }}{% endblock %}
-
-{% block article_title %}
-  <header class="page-title">
-    <h1>{{ _('Mozilla Licensing Policies') }}</h1>
-    <h2>{{ _('Binary Components') }}</h2>
-  </header>
-{% endblock %}
+{% block page_title %}{{ _('Mozilla Licensing Policies — Binary Components') }}{% endblock %}
 
 {% block article %}
   <h2>Direct 3D DLL</h2>
