--- a/bedrock/foundation/templates/foundation/leadership-network.html
+++ b/bedrock/foundation/templates/foundation/leadership-network.html
@@ -4,14 +4,9 @@
 
 {% extends "foundation/base-resp.html" %}
 
-{% block page_title %}{{ _('The Mozilla Leadership Network') }}{% endblock %}
+{% block page_title %}{{ _('The Mozilla Leadership Network — Connecting Leaders') }}{% endblock %}
 
 {% set body_id = "leadership-network" %}
-
-{% block article_header %}
-  <h2>{{ _('The Mozilla Leadership Network') }}</h2>
-  <p>{{ _('Connecting Leaders') }}</p>
-{% endblock %}
 
 {% block article %}
 
