--- a/bedrock/foundation/templates/foundation/openwebfund/thanks.html
+++ b/bedrock/foundation/templates/foundation/openwebfund/thanks.html
@@ -6,11 +6,7 @@
 
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
-{% block page_title %}{{ _('Thank you') }}{% endblock %}
-
-{% block article_title %}
-  <h1 class="page-title">{{ _('Thank you for supporting the Mozilla Open Web Fund') }}</h1>
-{% endblock %}
+{% block page_title %}{{ _('Thank you for supporting the Mozilla Open Web Fund') }}{% endblock %}
 
 {% block article %}
   <p>
