--- a/bedrock/foundation/templates/foundation/trademarks/distribution-policy.html
+++ b/bedrock/foundation/templates/foundation/trademarks/distribution-policy.html
@@ -4,11 +4,7 @@
 
 {% extends "foundation/base-resp.html" %}
 
-{% block page_title %}{{ _('Distribution Trademark Policy') }}{% endblock %}
-
-{% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla Trademark Policy for Distribution Partners') }}</h1>
-{% endblock %}
+{% block page_title %}{{ _('Mozilla Trademark Policy for Distribution Partners') }}{% endblock %}
 
 {% block article %}
   <p><em>{{ _('Version 0.9 (DRAFT)') }}</em></p>
