--- a/bedrock/foundation/templates/foundation/trademarks/l10n-website-policy.html
+++ b/bedrock/foundation/templates/foundation/trademarks/l10n-website-policy.html
@@ -4,11 +4,7 @@
 
 {% extends "foundation/base-resp.html" %}
 
-{% block page_title %}{{ _('Localization Team Web Sites') }}{% endblock %}
-
-{% block article_title %}
-  <h1 class="page-title">{{ _('Mozilla Trademark Policy for Web Sites Created by Localization Teams') }}</h1>
-{% endblock %}
+{% block page_title %}{{ _('Mozilla Trademark Policy for Web Sites Created by Localization Teams') }}{% endblock %}
 
 {% block article %}
   <p class="warning">{% trans %}This document is a working draft, and could still be changed at any time.{% endtrans %}</p>
