--- a/bedrock/foundation/templates/foundation/documents/mozilla-2006-financial-faq.html
+++ b/bedrock/foundation/templates/foundation/documents/mozilla-2006-financial-faq.html
@@ -12,8 +12,8 @@
 
 {% block article %}
   <p>
-   {% trans form990='http://static.mozilla.com/foundation/documents/mf-2006-irs-form-990.pdf',
-     statement='http://static.mozilla.com/foundation/documents/mf-2006-audited-financial-statement.pdf'
+   {% trans form990='https://static.mozilla.com/foundation/documents/mf-2006-irs-form-990.pdf',
+     statement='https://static.mozilla.com/foundation/documents/mf-2006-audited-financial-statement.pdf'
    %}
      This FAQ supplements the <a href="{{ form990 }}">Mozilla
      Foundation 2006 Form 990</a> and the <a
