--- a/media/css/mozorg/technology.less
+++ b/media/css/mozorg/technology.less
@@ -714,6 +714,10 @@ main {
         .font-size(36px);
         font-weight: bold;
     }
+
+    .thank p {
+        color: #fff;
+    }
 }
 
 /*--------------------------------------------------------------------------*/
