[Fix Bug 1276217] - Increased the input email width for mobile view. Decreased the .span_narrow of form-title by 1 unit & Increased the .span_narrow of form-submit by 1 unit.

--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -899,7 +899,8 @@ nav.menu-bar {
     }
 
     input[type=email] {
-        width: 80%;
+        .border-box();
+        width: 100%;
         padding: 15px 10px;
     }
 
@@ -1146,7 +1147,7 @@ nav.menu-bar {
     .footer-newsletter-form,
     #newsletter-form {
         .form-title {
-            .span_narrow(4);
+            .span_narrow(3);
             padding-top: 4px;
         }
 
@@ -1155,7 +1156,7 @@ nav.menu-bar {
         }
 
         .form-submit {
-            .span_narrow(3);
+            .span_narrow(4);
         }
     }
 
