--- a/bedrock/firefox/templates/firefox/new/scene2.html
+++ b/bedrock/firefox/templates/firefox/new/scene2.html
@@ -51,5 +51,8 @@
 {% endblock %}
 
 {% block js %}
+  {% if switch('flashtalking') %}
+    {% javascript 'firefox_new_pixel' %}
+  {% endif %}
   {% javascript 'firefox_new_scene2' %}
 {% endblock %}
