--- a/bedrock/firefox/templates/firefox/geolocation.html
+++ b/bedrock/firefox/templates/firefox/geolocation.html
@@ -217,7 +217,7 @@
 
 </section><!-- end #faq -->
 
-<div style="display:none">
+<div class="hidden">
   <div id="geo-demo">
     <div id="map_canvas"></div>
     <button id="locateButton" type="button">{{ _('Where am I?') }}</button>
