--- a/media/css/security/security.less
+++ b/media/css/security/security.less
@@ -251,6 +251,10 @@ p.note {
         .span-all();
         .table {
             background: #fff;
+
+            td {
+                vertical-align: top;
+            }
         }
     }
 }
